ecmascript/parser/tests/test262-error-references/fail/02e5861a1ef10c42.js.stderr
error: Return statement is not allowed here
 --> $DIR/tests/test262-parser/fail/02e5861a1ef10c42.js:1:3
  |
1 | { return; }
  |   ^^^^^^^

